--- a/templates/401.jade
+++ b/templates/401.jade
@@ -2,4 +2,4 @@ extends layout
 
 block content
     h2 401 Unauthorized
-    h3 What are you doing here? Get away!
+    p What are you doing here? Get away!
