--- a/templates/404.jade
+++ b/templates/404.jade
@@ -2,4 +2,4 @@ extends layout
 
 block content
     h2 404 File Not Found
-    h3 Nothing to see here, move along.
+    p Nothing to see here, move along.
