Spruce up the pages with some images

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -12,6 +12,7 @@ block styles
 
 block content
     h3 This treehouse is members-only.
+    img(src='/i/treehouse.svg')
     ul
         li.btn
             a(href='login') I'm a member, let me in!
