--- a/templates/inside.jade
+++ b/templates/inside.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
     h2 Inside the Treehouse
+    img(src='/i/red-panda.gif')
     p
         | You're here, you've made it!
         | Isn't this everything you ever hoped it would be?
