Add password reset flow

--- a/templates/inside.jade
+++ b/templates/inside.jade
@@ -6,5 +6,7 @@ block content
     p
         | You're here, you've made it!
         | Isn't this everything you ever hoped it would be?
+    p
+        a.btn(href='/password') I changed my mind about my favorite color.
     form(action='/logout', method='post')
         input.btn(type='submit', value="This was fun, but I want to go play outside now.")
